# reldump

./: CHANGELOG.md  Cargo.toml  dummy-config.json
.github/workflows/: release-please.yml
sample-databases/mysql/dummy/: database.sql
sample-databases/mysql/flight/: Dockerfile  database.sql  generate-names.sh
sample-databases/mysql/from-self/: database.sql
src/: main.rs
