[package]
name = "reldump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
itertools = "0.11.0"
mysql = "24.0.0"
mysql_common = "0.31.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
